🐛 Fix a bug : ajout de l'overflow en auto dans scss pour ré-activer le scroll lors de la navigation via les routerLink

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,8 @@ body{ margin: 0;
     color: #261447;
 }
 
+body, html {
+    overflow: auto;
+}
 
 
